@@ -1,5 +1,5 @@
 # Copyright (C) 2004-2007 Warp Networks S.L.
-# Copyright (C) 2008-2013 Zentyal S.L.
+# Copyright (C) 2008-2014 Zentyal S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -3825,7 +3825,6 @@ sub _enforceServiceState
         }
     }
 
-
     # Only execute ifups if we are not running from init on boot
     # The interfaces are already up thanks to the networking start
     if ((exists $ENV{USER}) or (exists $ENV{PLACK_ENV})) {
@@ -3838,6 +3837,8 @@ sub _enforceServiceState
             }
         }
         EBox::Util::Lock::unlock('ifup');
+        # Notify if ifup has been done
+        $self->_flagIfUp(\@ifups);
     }
     EBox::NetWrappers::clean_ifaces_list_cache();
 
@@ -4716,6 +4717,43 @@ sub replicationExcludeKeys
     return [ 'interfaces' ];
 }
 
+# Group: Ifup flag methods
+
+# Method: flagIfUp
+#
+# Returns:
+#
+#    Array ref - containing the ifaces that have set up in last setConf
+#
+#    undef - if the flag is not set
+sub flagIfUp
+{
+    my ($self) = @_;
+
+    my $state = $self->get_state();
+    if (exists $state->{ifup}) {
+        return $state->{ifup};
+    }
+    return undef;
+}
+
+# Method: unsetFlagIfUp
+#
+#    Delete flag if up
+#
+sub unsetFlagIfUp
+{
+    my ($self) = @_;
+
+    my $state = $self->get_state();
+    if (exists $state->{ifup}) {
+        delete $state->{ifup};
+        $self->set_state($state);
+    }
+}
+
+# Group: Other methods
+
 sub _pppoeRules
 {
     my ($self, $flush) = @_;
@@ -4949,6 +4987,19 @@ sub _checkHAFloatingIPCollision
             throw EBox::Exceptions::External("The IP: " . $address . " is already".
                     " a HA floating IP.");
         }
+    }
+}
+
+# Flag the iface is up
+# Only useful to ha by now
+sub _flagIfUp
+{
+    my ($self, $ifups) = @_;
+
+    if (@{$ifups}) {
+        my $state = $self->get_state();
+        $state->{ifup} = $ifups;
+        $self->set_state($state);
     }
 }
 
