@@ -1,4 +1,5 @@
 3.4
+	+ Added flag to notify when an ifup is set
 	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
 	+ Implement replicationExcludeKeys() to avoid replication of ifaces in HA
 	+ Migrated to use Plack / PSGI API instead of the CGI one
